--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,11 +57,13 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.compose.material3:material3:1.1.0-alpha03'
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.google.dagger:hilt-android:2.43.2'
     implementation "androidx.room:room-runtime:2.4.3"
     implementation "androidx.room:room-ktx:2.4.3"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-core-jvm:1.3.3'
     implementation "androidx.navigation:navigation-compose:2.5.3"
 
     kapt "androidx.room:room-compiler:2.4.3"
